--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Daxx-Userbot",
+    "name": "ᴊᴀᴛɪɴ - ᴜꜱᴇʀʙᴏᴛ",
     "logo": "https://telegra.ph/file/3fb9a8619d88238052399.jpg",
     "description": "Jatin-Userbot is a powerful, advanced, multi-featured Telegram userbot.",
     "keywords": [
